--- a/staff/carolina-lopez/menu-planner/menu-planner-app/package.json
+++ b/staff/carolina-lopez/menu-planner/menu-planner-app/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "my-stuff-app",
+  "name": "menu-planner-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "menu-planner-data": "file:../menu-planner-data",
+    "menu-planner-utils": "file:../menu-planner-utils",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
@@ -13,8 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:inspect": "react-scripts --inspect-brk test --runInBand --no-cache",
-    "test:debug": "react-scripts --debug test --runInBand --no-cache"
+    "test:inspect": "react-scripts --inspect-brk=9230 test --runInBand --no-cache"
   },
   "eslintConfig": {
     "extends": "react-app"
