--- a/staff/jorge-garces/wannadog/wannadog-api/package.json
+++ b/staff/jorge-garces/wannadog/wannadog-api/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "busboy": "^0.3.1",
     "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
