--- a/staff/anna-nolla/dogs-company/api/package.json
+++ b/staff/anna-nolla/dogs-company/api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "coverage": "^0.4.1",
     "data": "file:../data",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
