--- a/staff/albert-fuente/skyshop/skyshop-app/package.json
+++ b/staff/albert-fuente/skyshop/skyshop-app/package.json
@@ -10,13 +10,15 @@
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "skyshop-utils": "file:../skyshop-utils"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "test:inspect": "react-scripts --inspect-brk=9230 test --runInBand --no-cache",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache"
   },
   "eslintConfig": {
@@ -33,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "skyshop-data": "file:../skyshop-data"
   }
 }
