--- a/staff/roger-perez/goliath/goliath-api/package.json
+++ b/staff/roger-perez/goliath/goliath-api/package.json
@@ -9,7 +9,8 @@
     "debug": "node debug .",
     "test": "npx mocha logic/**/**/*.spec.js",
     "test-debug": "npx mocha debug logic/**/**/*.spec.js",
-    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js"
+    "test-inspect": "npx mocha --inspect-brk logic/**/**/*.spec.js",
+    "test:coverage": "npx nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --timeout 10000 --runInBand"
   },
   "keywords": [],
   "author": "",
