--- a/staff/nestor-llorens/skycaching/api/package.json
+++ b/staff/nestor-llorens/skycaching/api/package.json
@@ -9,7 +9,8 @@
     "debug": "node debug .",
     "test": "npx mocha logic/**/*.spec.js",
     "test-debug": "npx mocha debug logic/**/*.spec.js",
-    "test-inspect": "npx mocha --inspect-brk logic/**/*.spec.js"
+    "test-inspect": "npx mocha --inspect-brk logic/**/*.spec.js",
+    "coverage": "nyc --reporter=html --reporter=text mocha logic/**/**/*.spec.js --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "nyc": "^14.1.1"
   }
 }
