--- a/staff/lluis-agusti/democratum/democratum-api/.env
+++ b/staff/lluis-agusti/democratum/democratum-api/.env
@@ -1,5 +1,5 @@
 PORT = 8080
-DB_URL = mongodb://localhost/democratum-test
+DB_URL = mongodb://localhost/democratum
 DB_URL_TEST = mongodb://localhost/democratum-test
 JWT_SECRET = contrasenya1
 CLOUDINARY_API_KEY = 837744298618723
