--- a/staff/jorge-rodri/classty/classty-api/package.json
+++ b/staff/jorge-rodri/classty/classty-api/package.json
@@ -22,8 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "cloudinary": "^1.15.0",
     "busboy": "^0.3.1",
-    "body-parser":"^1.19.0"
-
+    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
