--- a/staff/jorge-rodri/classty/classty-app/.env
+++ b/staff/jorge-rodri/classty/classty-app/.env
@@ -1,1 +1,3 @@
 REACT_APP_API_URL = 'http://localhost:8080/api'
+REACT_APP_JWT_SECRET_TEST = en realidad son uruguayo (juanpi), o sea, un vendido
+REACT_APP_DB_URL_TEST = mongodb://localhost:27017/classty-api-test
