--- a/staff/jorge-rodri/classty/classty-app/package.json
+++ b/staff/jorge-rodri/classty/classty-app/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classty-data": "file:../classty-data",
+    "classty-utils": "file:../classty-utils",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "jsonwebtoken" : "jsonwebtoken@^8.5.1",
+    "bcryptjs": "^2.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,7 +19,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "test:inspect": "react-scripts --inspect-brk=9230 test --runInBand --no-cache"
-
   },
   "eslintConfig": {
     "extends": "react-app"
