--- a/staff/anna-nolla/dogs-company/dog-company-app/package.json
+++ b/staff/anna-nolla/dogs-company/dog-company-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "dotenv": "^8.1.0",
     "leaflet": "^1.5.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
