--- a/staff/jorge-garces/wannadog/wannadog-api/.env
+++ b/staff/jorge-garces/wannadog/wannadog-api/.env
@@ -1,5 +1,6 @@
 PORT = 8080
-DB_URL_TEST = mongodb://172.17.0.2:27017/wannadog-test
+#DB_URL_TEST = mongodb://172.17.0.2:27017/wannadog-test
+#DB_URL = mongodb://172.17.0.2:27017/wannadog-test
 #DB_URL = mongodb://172.17.0.2:27017/wannadog-api
 DB_URL = mongodb://heroku_m02k5479:4h5p1mqd79vkijoj7m8s9glhlm@ds015780.mlab.com:15780/heroku_m02k5479
 
