--- a/staff/jorge-garces/wannadog/wannadog-app/package.json
+++ b/staff/jorge-garces/wannadog/wannadog-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -10,6 +11,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "surge": "^0.21.3",
+    "wannadog-data": "file:../wannadog-data",
     "wannadog-utils": "file:../wannadog-utils"
   },
   "scripts": {
